# aws-eks-iam-auth-controller

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  WAIVER  index.yaml
.github/: FUNDING.yml  dependabot.yml  install-cr.sh  install.sh
.github/workflows/: build.yaml  create-release.yml  oci-image.yml  publish-charts.yml  publish.yml
charts/rustrial-aws-eks-iam-auth-controller/: Chart.yaml  values.yaml
charts/rustrial-aws-eks-iam-auth-controller/crds/: iamidentitymappings.yml
charts/rustrial-aws-eks-iam-auth-controller/templates/: _helpers.tpl  additional-iamidentity-mapping.yaml  default-iamidentity-mapping.yaml  deployment.yaml  serviceaccount.yaml
src/: main.rs
