[package]
name = "rustrial-aws-eks-iam-auth-controller"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.11"
env_logger = "0.9.0"
anyhow = { version = "1.0.37", features = ["std"] }
thiserror = "1.0.23"
kube = { version = "0.64.0", features = ["derive"] }
kube-runtime = "0.64.0"
k8s-openapi = { version = "0.13.1", default-features = false, features = [
    "v1_20",
] }
tokio = { version = "^1.0.1", features = ["full"] }
schemars = "^0.8.0"
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0.61"
serde_yaml = "^0.8.14"
futures = "0.3.9"
metrics = "0.17.0"
metrics-exporter-prometheus = "0.6.1"
