[package]
name = "rustrial-aws-eks-iam-auth-controller"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
anyhow = { version = "1.0.57", features = ["std"] }
thiserror = "1.0.31"
kube = { version = "0.72.0", features = ["derive"] }
kube-runtime = "0.72.0"
k8s-openapi = { version = "0.14.0", default-features = false, features = [
    "v1_23",
] }
tokio = { version = "1.18.2", features = ["full"] }
schemars = "0.8.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
futures = "0.3.21"
metrics = "0.18.1"
metrics-exporter-prometheus = "0.9.0"
